[DHUB 375] Fix sonar issues (#410)
* [DHUB-375] Fix sonar issues

Co-authored-by: Max Broens <max.broens@kadaster.nl>